# familiarity

./: README.md  create_splits_of_verying_difficulty.py  pyproject.toml
.github/workflows/: test.yaml
src/familarity/: __init__.py  embedding_models.py  logger.py  metric.py  utils.py
src/familiarity/: embedding_models.py  metric.py
tests/: conftest.py  test_embedding_models.py  test_logger.py  test_metric.py  test_utils.py
